--- a/public/css/csszaspisak.css
+++ b/public/css/csszaspisak.css
@@ -1,3 +1,20 @@
+/*
+Ne ponavljaj ono sto pise u drugom fajlu, kod treba da bude modularan
+jedna stvar u jedan fajl,
+alo hoces pogledaj kako radi SASS(css predkompajler) koji ti omogucava da nestujes kod tipa:
+main{
+  color:red;
+
+  .somediv{
+    width:20rem;
+
+    a{
+      height:1rem;
+    }
+  }
+}
+Na taj nacin ti sve bude mnogo citljivije, ali ako neces ne moras, ja vas css svakako necu dirati
+*/
 *,
 *::after,
 *::before {
@@ -144,26 +161,27 @@ main #message {
   font-size: 26px;
 }
 
-.container{
-    width: 100%;
-    height: 100%;
+.container {
+  width: 100%;
+  height: 100%;
 }
 
-.bzat{
-width: fit-content;
-height: 30px;
-font-size: 25px;
-padding: auto;
+/*nemoj ovakva imena klasa*/
+.bzat {
+  width: fit-content;
+  height: 30px;
+  font-size: 25px;
+  padding: auto;
 }
 
-table{
+table {
   border: 2px solid black;
   padding: 5px;
   border-collapse: collapse;
   width: 100%;
 }
 
-table tbody th{
+table tbody th {
   font-style: italic;
   font-size: 30px;
   text-align: center;
@@ -172,21 +190,22 @@ table tbody th{
   padding: 5px;
 }
 
-table tbody th{
+table tbody th {
   border: 3px solid black;
 }
 
-table td{
+table td {
   border: 1px solid rgb(9, 7, 7);
   padding: 2px;
   border-collapse: collapse;
 }
 
-table tbody tr td:nth-child(1){
+/*mozes da koristis i :first-child umesto :nth-child(1)*/
+table tbody tr td:nth-child(1) {
   text-align: center;
 }
 
-table tbody tr td{
+table tbody tr td {
   text-align: center;
   font-size: 20px;
 }
