Promena, radio butoni vraceni na mesto, span umesto inputa u uvidprijave.html

--- a/public/css/prijava.css
+++ b/public/css/prijava.css
@@ -36,3 +36,11 @@ button{
 .container>button:last-child{
     margin-right: 20%;
 }
+
+main article{
+    justify-content: space-around;
+  }
+
+main #start{
+    text-align: left;
+}
