--- a/public/css/spisak.css
+++ b/public/css/spisak.css
@@ -189,3 +189,15 @@ table tbody tr td {
   text-align: center;
   font-size: 20px;
 }
+
+table tr td:first-child{
+  width: 50px;
+}
+
+table tr td:first-child{
+  width: 50px;
+}
+
+table td{
+  padding: 5px 1px;
+}
