--- a/public/css/unosprijave.css
+++ b/public/css/unosprijave.css
@@ -11,7 +11,7 @@
 }
 
 body {
-  background-image: url("../dodaci/m10.jpg");
+  background-image: url("../../images/m10.jpg");
   background-size: 100vw 100vh;
   font-family: "Courier New", Courier, monospace;
   font-weight: 600;
