--- a/public/css/spisak.css
+++ b/public/css/spisak.css
@@ -30,7 +30,7 @@ main {
   border-radius: 10px;
   position: absolute;
   background-color: rgba(83, 255, 83, 0.685);
-  top: 30%;
+  top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
@@ -199,4 +199,42 @@ table tr td:first-child {
 
 table td {
   padding: 5px 1px;
+}
+
+#buttontab{
+  display: flex;
+  flex-wrap: nowrap;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: #063b06a0;
+  font-size: 40px;
+  color: white;
+  border: 3px solid black;
+  margin-top: 2px;
+  width: fit-content;
+  overflow: hidden;
+  margin-bottom: 10px;
+}
+
+a{
+  display: block;
+  padding: 5px;
+  text-decoration: none;
+  flex-grow: 1;
+  text-align: center;
+  color: white;
+  border: 2px solid white;
+  transition: 1s;
+}
+
+a:active{
+  color: red;
+  background-color: #ffffff90;
+  font-size: 45px;
+}
+
+a:hover{
+  color: red;
+  background-color: #ffffff;
+  font-size: 42px;
 }
