--- a/public/css/unosprijave.css
+++ b/public/css/unosprijave.css
@@ -40,55 +40,6 @@ main article {
   font-size: 30px;
 }
 
-main label {
-  display: inline-block;
-  width: 330px;
-}
-
-main form {
-  display: grid;
-  grid-template-columns: [inputs1] 100%;
-  grid-template-rows: [row1] 1fr [row2] 1fr [row3] 1fr;
-}
-
-main h2 {
-  font-size: 40px;
-  text-align: center;
-  padding: 16px;
-}
-
-main #start {
-  grid-column-start: inputs1;
-  grid-column-end: inputs3;
-  grid-row-start: row4;
-  text-align: center;
-}
-
-main #datefrom,
-main #dateto,
-main #alpha {
-  grid-column-start: inputs1;
-}
-
-main #DOsC,
-main #S {
-  grid-column-start: inputs2;
-}
-
-main #datefrom,
-main #DOsC {
-  grid-row-start: row1;
-}
-
-main #dateto,
-main #S {
-  grid-row-start: row2;
-}
-
-main #radio {
-  grid-row-start: row3;
-}
-
 main button {
   height: 36px;
   width: 30%;
@@ -131,6 +82,11 @@ main select option {
   background-color: rgba(255, 255, 255, 0.205);
 }
 
+#datefrom input,
+#dateto input {
+  width: 100%;
+}
+
 main .unit {
   display: inline-block;
   width: 80px;
@@ -146,5 +102,20 @@ main #message {
 #radio {
   font-size: 25px;
   padding: 5px;
-  left: 20%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  flex-wrap: wrap;
+}
+
+#radio input {
+  width: 32px;
+  height: 32px;
+}
+
+#radio span {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
