--- a/views/apply.ejs
+++ b/views/apply.ejs
@@ -10,7 +10,7 @@
   </head>
 
   <body>
-    <%- include("partials/header.ejs") %>
+    <%- include("partials/header.ejs") %> <%- include("partials/logout.ejs") %>
 
     <main>
       <%- include("partials/welcome.ejs") %>
