--- a/views/login.ejs
+++ b/views/login.ejs
@@ -13,6 +13,7 @@
   </head>
   <body>
     <%- include("partials/header.ejs") %>
+    <%- include("partials/logout.ejs") %>
 
     <main>
       <h2>Prijavi se pomoću svog naloga</h2>
